src/ast/snapshots/tests__fun_decl.snap
---
source: src/ast/symbol.rs
expression: determinize(table)
---
[
    (
        ScopeId(
            1,
        ),
        Scope {
            parent: ScopeId(
                0,
            ),
            variables: PartialSymbolTable {
                vars: [],
            },
        },
    ),
    (
        ScopeId(
            2,
        ),
        Scope {
            parent: ScopeId(
                1,
            ),
            variables: PartialSymbolTable {
                vars: [
                    VariableRecord {
                        id: IdentId(
                            0,
                        ),
                        text: "x",
                        decl: FunctionArg(
                            FunctionDeclArgs(
                                NodeId(
                                    3,
                                ),
                            ),
                        ),
                    },
                    VariableRecord {
                        id: IdentId(
                            1,
                        ),
                        text: "y",
                        decl: FunctionArg(
                            FunctionDeclArgs(
                                NodeId(
                                    5,
                                ),
                            ),
                        ),
                    },
                ],
            },
        },
    ),
    (
        ScopeId(
            3,
        ),
        Scope {
            parent: ScopeId(
                2,
            ),
            variables: PartialSymbolTable {
                vars: [
                    VariableRecord {
                        id: IdentId(
                            2,
                        ),
                        text: "z",
                        decl: Decl(
                            Decl(
                                NodeId(
                                    7,
                                ),
                            ),
                        ),
                    },
                    VariableRecord {
                        id: IdentId(
                            3,
                        ),
                        text: "k",
                        decl: Decl(
                            Decl(
                                NodeId(
                                    9,
                                ),
                            ),
                        ),
                    },
                ],
            },
        },
    ),
]
