src/ast/snapshots/tests__nested.snap
---
source: src/ast/symbol.rs
expression: determinize(table)
---
[
    (
        ScopeId(
            1,
        ),
        Scope {
            parent: ScopeId(
                0,
            ),
            variables: PartialSymbolTable {
                vars: [],
            },
        },
    ),
    (
        ScopeId(
            2,
        ),
        Scope {
            parent: ScopeId(
                1,
            ),
            variables: PartialSymbolTable {
                vars: [
                    VariableRecord {
                        id: IdentId(
                            0,
                        ),
                        text: "n",
                        decl: Decl(
                            Decl(
                                NodeId(
                                    14,
                                ),
                            ),
                        ),
                    },
                ],
            },
        },
    ),
    (
        ScopeId(
            3,
        ),
        Scope {
            parent: ScopeId(
                1,
            ),
            variables: PartialSymbolTable {
                vars: [
                    VariableRecord {
                        id: IdentId(
                            1,
                        ),
                        text: "k",
                        decl: Decl(
                            Decl(
                                NodeId(
                                    23,
                                ),
                            ),
                        ),
                    },
                ],
            },
        },
    ),
]
