src/ast/snapshots/tests__scope_res_nested_invalid.snap
---
source: src/ast/scope_resolution.rs
expression: "resolver.map(|r| determinize(r, &db, &sym))"
---
Err(
    [
        ResolutionError {
            string: "n",
            scope: ScopeId(
                3,
            ),
            identifier: Identifier(
                NodeId(
                    17,
                ),
            ),
        },
    ],
)
