src/ast/snapshots/tests__scope_res_recursive.snap
---
source: src/ast/scope_resolution.rs
expression: "resolver.map(|r| determinize(r, &db, &sym))"
---
Ok(
    [
        (
            Node {
                ty: Identifier,
                text_range: 50..51,
                children: [],
            },
            Identifier(
                NodeId(
                    2,
                ),
            ),
            VariableRecord {
                id: IdentId(
                    0,
                ),
                text: "f",
                decl: FunctionDecl(
                    FunctionDecl(
                        NodeId(
                            12,
                        ),
                    ),
                ),
            },
        ),
        (
            Node {
                ty: Identifier,
                text_range: 95..96,
                children: [],
            },
            Identifier(
                NodeId(
                    3,
                ),
            ),
            VariableRecord {
                id: IdentId(
                    0,
                ),
                text: "f",
                decl: FunctionDecl(
                    FunctionDecl(
                        NodeId(
                            12,
                        ),
                    ),
                ),
            },
        ),
    ],
)
