src/ast/snapshots/tests__symbol_table_nested.snap
---
source: src/ast/symbol.rs
expression: determinize(table)
---
[
    (
        ScopeId(
            0,
        ),
        Scope {
            parent: None,
            ty: NormalScope,
            variables: PartialSymbolTable {
                vars: [],
            },
        },
    ),
    (
        ScopeId(
            1,
        ),
        Scope {
            parent: Some(
                ScopeId(
                    0,
                ),
            ),
            ty: NormalScope,
            variables: PartialSymbolTable {
                vars: [],
            },
        },
    ),
    (
        ScopeId(
            2,
        ),
        Scope {
            parent: Some(
                ScopeId(
                    1,
                ),
            ),
            ty: NormalScope,
            variables: PartialSymbolTable {
                vars: [
                    VariableRecord {
                        id: IdentId(
                            0,
                        ),
                        text: "n",
                        decl: Decl(
                            Decl(
                                NodeId(
                                    14,
                                ),
                            ),
                        ),
                    },
                ],
            },
        },
    ),
    (
        ScopeId(
            3,
        ),
        Scope {
            parent: Some(
                ScopeId(
                    1,
                ),
            ),
            ty: NormalScope,
            variables: PartialSymbolTable {
                vars: [
                    VariableRecord {
                        id: IdentId(
                            1,
                        ),
                        text: "k",
                        decl: Decl(
                            Decl(
                                NodeId(
                                    23,
                                ),
                            ),
                        ),
                    },
                ],
            },
        },
    ),
]
